<resources>
    <string name="app_name">MyViewAndViews</string>
    <string name="content_text">Perjuangan BJ Habibie dari masa kecil hingga menjadi Presiden
        Indonesia ketiga dilaluinya dengan keras dan penuh dengan perjuangan yang panjang.
        Banyak Peran dan karya BJ Habibie bagi bangsa Indonesia khususnya dalam bidang kedirgantaraan.
        Berikut profil dan biografi BJ Habibie dari masa kecil hingga ia sukses hingga saat ini.
    </string>
    <string name="nama">Prof.Dr.Ing.H Bacharuddin Jusuf Habibie</string>
    <string name="TTL">Parepare,25 Juni 1936</string>
    <string name="jabatan">Presiden Ke-3 Indonesia\n
        Wakil Presiden Indonesia ke-7\n
        Menteri Riset dan Teknologi Indoensia ke-4
    </string>
    <string name="penemuan">Crack Progression Theory\n
        Pesawat N-250\n
        Pesawat R80
    </string>
    <string name="donasi">Donasi Pesawat R80</string>
    <string name="ajakan">Sudah Saatnya Indonesia Punya Pesawat Sendiri, Salurkan Donasi Anda !</string>
</resources>
