<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/r80"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="@dimen/activity_horizontal_layout"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:background="#4D000000"
                android:drawableStart="@drawable/ic_flight_white_24dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="Pesawat R80"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:drawableLeft="@drawable/ic_flight_white_24dp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginTop="@dimen/activity_vertical_layout"
            android:text="B.J Habibie"
            android:textColor="@android:color/black"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginTop="@dimen/activity_vertical_layout"
            android:text="Presiden Ke 3 Indonesia"
            android:textColor="@android:color/black"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginTop="@dimen/activity_vertical_layout"
            android:text="@string/content_text"
            android:textColor="@android:color/black"
            android:lineSpacingMultiplier="1"/>

      <TableLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="@dimen/activity_horizontal_layout"
          android:layout_marginLeft="@dimen/activity_horizontal_layout"
          android:layout_marginTop="@dimen/activity_vertical_layout"
          android:layout_marginBottom="@dimen/activity_vertical_layout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:textColor="@android:color/black"
                android:text="Nama"/>
            <TextView
                android:layout_weight="1"
                android:text="Prof. Dr. Ing. H. Bacharuddin Jusuf Habibie"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:text="TTL"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/TTL"
                android:textColor="@android:color/black"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:layout_marginRight="@dimen/activity_horizontal_layout"
                    android:textColor="@android:color/black"
                    android:text="Jabatan"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    android:text="@string/jabatan"
                    android:textColor="@android:color/black"/>
        </TableRow>
      </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:textColor="@android:color/black"
            android:text="@string/donasi"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout">
            <de.hdodenhof.circleimageview.CircleImageView
               android:id="@+id/r80"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginRight="@dimen/activity_horizontal_layout"
                android:layout_marginEnd="@dimen/activity_vertical_layout"
                android:layout_centerVertical="true"
                android:src="@drawable/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/r80"
            android:layout_toRightOf="@id/r80"
            android:text="@string/ajakan"/>
        </RelativeLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_layout"
            android:layout_marginLeft="@dimen/activity_horizontal_layout"
            android:layout_marginRight="@dimen/activity_horizontal_layout"
            android:id="@+id/btn_donasi"
            android:text="Donasi"/>
    </LinearLayout>




</ScrollView>